# sdp-unit-tests

./: README.md  SDP-pipeline-to-test.py  databricks.yml  main.py  pyproject.toml
ingestion_profile/: SDP-ingest_prod.py  SDP-ingest_test.py
resources/: README.py  spark-pipeline.yml
sdp-python/transformations/: 01-bronze.py  config.py  revenue_logic.py
sdp-python/transformations/test/: test_revenue_logic.py
sdp_python/transformations/test/: 03-gold-test-adv.py  03-gold-test.py
test/: SDP-Test-Dataset-setup.py  SDP-Tests.sql  test_revenue_logic.py
tests/unit/: test_revenue_logic.py
