[project]
name = "sdp-unit-tests"
version = "0.1.0"
description = "Analysis on Unit Testing Spark Declarative Pipelines in the Databricks Lakehouse"
requires-python = ">=3.12"
dependencies = [
    "chispa>=0.11.1",
    "pyspark>=4.1.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
